# full-stack-container-example

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: constants.py  main.py
backend/data/: singers.csv
backend/src/: __main__.py
backend/src/api/: constants.py  database.py  main.py
backend/tests/: test_get_index.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
frontend/src/__tests__/components/: singers.test.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: results.tsx  singer.type.ts  singers.tsx
